# app_server

./: CMakeLists.txt  readme.md
cpp/: Crypto.cpp  DBManager.cpp  DBmanager.cpp  IotHandler.cpp  UserHandler.cpp  main.cpp  network.cpp  socket.cpp
database/: data.sqlite  server_db
header/: Crypto.h  DBManager.h  DBmanager.h  DefaultHandler.h  IRequestHandler.h  IoTDB.h  IotHandler.h  Logger.h  Request_and_Respore.h  Units.h  UserHandler.h  network.h  router.h  socket.h
